--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Init Runner ⚙️
         uses: UnterrainerInformatik/init-runner-action@master
         with:
-          self-hosted: ${{ inputs.self_hosted }}
+          self_hosted: ${{ inputs.self_hosted }}
 
       - name: Cache Maven packages 💾
         uses: actions/cache@v3
